style.css
/* Stylesheet for QuickLinks Chrome Extension */


body {
  width: 300px !important;
  height: 200px;
  margin: 0 !important;
  overflow-y: hidden;
}

input {
  display: block;
  width: 100%;
  text-align: center;
  font-size: 1.3em;
  line-height: 2em;
  padding-top: 10px;
  padding-bottom: 10px;
}

button {
  outline: none;
}

.saved-alert {
  background-color: green;
  color: white;
  font-size: 4em;
  font-weight: 100;
  width: 100%;
  text-align: center;
  position: absolute;
  top: 0;
  height: 150px;
  padding-top: 27%;
  display: none;
  opacity: 0;
}

.saved-animation {
  display: block;
  -webkit-animation-name: show;
  -webkit-animation-duration: 1s;
  -webkit-animation-delay: 0.1s;
}

@-webkit-keyframes show {
  0% {opacity: 0;}
  25% {opacity: 1;}
  100% {opacity: 1;}
}

.title {
  text-align: center;
  margin: 0 0 !important;
  padding-top: 12px !important;
  padding-bottom: 12px !important;
  background-color: dimgray;
  color: whitesmoke;
  font-weight: 100;
  font-size: 32px;
}

.display-none {
  /* display: none; */
  visibility: 'hidden';
  height: 14px;
}

.current-page {
  text-align: center;
  font-weight: 400;
  margin: 4px;
  color: blue;
}

.button {
  width: 100%;
  font-size: 2em;
  background-color: transparent;
  border-size: 1px;
  border-style: solid;
  padding: 7px;
  color: whitesmoke;
}

.button-save {
  border-color: green;
  background-color: green;
}

.button-save:active {
  background-color: darkgreen;
}

.button-view {
  border-color: #333;
  background-color: #333;
}

.button-view:active {
  background-color: #111;
}

.list-container {
  max-height: 400px;
  overflow-y: scroll;
}

li {
  padding: 5px;
  font-size: 1.2em;
  border: 1px solid #BBB;
}

.list-item-div {
  display: inline-block;
  width: 90%;
}

li button {
  background-color: transparent;
  color: red;
  float: right;
  border: none;
  font-size: 2em;
  width: 10%;
}

li button:hover {
  background-color: red;
  color: white;
}

li:not(button):hover {
  background-color: gray;
}

.link {
  font-weight: bold;
  display: inline-block;
  width: 100%;
  cursor: pointer;
}

.url {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  display: inline-block;
  cursor: pointer;
}

